# DiskDeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  make-app.sh
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: DiskDeck.icns
assets/AppIcon.icon/: icon.json
docs/superpowers/plans/: 2026-07-11-apfs-accounting.md  2026-07-11-app-leftovers.md  2026-07-11-developer-lens.md  2026-07-11-diskdeck-adaptive-native-overhaul.md  2026-07-11-growth-watch.md  2026-07-11-menu-bar-monitor.md  2026-07-11-moved-items-restore.md  2026-07-11-offload-safety-and-ui-smoke.md  2026-07-11-open-source-launch-hygiene.md  2026-07-11-regrowth-history.md  2026-07-11-treemap-context-navigation.md  2026-07-12-developer-deep-dive.md  (+9 more)
scripts/: check-dist.sh  check-release-artifact.sh  check-universal-binary.sh  focus-window.swift  install.command  release-lib.sh  release.sh  render-icon.cjs  right-click.swift  test-community-files.sh  test-icon-pipeline.sh  test-package-artifact.sh  test-pre-commit.sh  test-pre-push.sh  test-release.sh  test-signed-ui.sh  test-ui-smoke.sh  test-universal.sh  ui-smoke.applescript
src/: apfs.rs  app.rs  clean.rs  developer.rs  file_review.rs  folder_lens.rs  forecast.rs  history.rs  leftovers.rs  main.rs  monitor.rs  moves.rs  offload.rs  reclaim_history.rs  reclaim_plan.rs  rules.rs  scan.rs  search.rs  theme.rs  transfer.rs  treemap.rs  volumes.rs
(+14 files in other folders)
