[package]
name = "diskdeck"
version = "1.0.0"
edition = "2021"
description = "A native macOS disk-space visualizer and safe reclaimer"
license = "Apache-2.0"
repository = "https://github.com/raghavaadi/DiskDeck"

[dependencies]
eframe = "0.29"
egui = "0.29"
rayon = "1.10"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
